# 01.Study

06.nomad_coding/04.airbnb-clone-backend/: construct_url.txt  pyproject.toml
06.nomad_coding/04.airbnb-clone-backend/bookings/: models.py  serializers.py
06.nomad_coding/04.airbnb-clone-backend/bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
06.nomad_coding/04.airbnb-clone-backend/categories/: models.py  serializers.py  urls.py  views.py
06.nomad_coding/04.airbnb-clone-backend/categories/migrations/: 0001_initial.py  0002_alter_category_options.py
06.nomad_coding/04.airbnb-clone-backend/common/: models.py
06.nomad_coding/04.airbnb-clone-backend/config/: authentication.py  settings.py  urls.py
06.nomad_coding/04.airbnb-clone-backend/direct_messages/: apps.py  models.py
06.nomad_coding/04.airbnb-clone-backend/direct_messages/migrations/: 0001_initial.py  0002_alter_message_room_alter_message_user.py
06.nomad_coding/04.airbnb-clone-backend/experiences/: models.py  views.py
06.nomad_coding/04.airbnb-clone-backend/experiences/migrations/: 0001_initial.py  (+2 more)
06.nomad_coding/04.airbnb-clone-backend/medias/: models.py  views.py
06.nomad_coding/04.airbnb-clone-backend/reviews/: admin.py  models.py
06.nomad_coding/04.airbnb-clone-backend/rooms/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
06.nomad_coding/04.airbnb-clone-backend/users/: admin.py  models.py  serializers.py  urls.py  views.py
06.nomad_coding/04.airbnb-clone-backend/wishlists/: models.py  serializers.py  urls.py  views.py
(+264 files in other folders)
